--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SBTV Mount Quiz & Services</title>
+    <title>Expert TV Installer in Moreno Valley & Inland Empire | SBTV Installs</title>
+    <meta name="description" content="5-star rated TV mounting and home theater installation in Moreno Valley, CA. We offer same-day service, professional wire concealment, and soundbar mounting. Get your free quote!">
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
@@ -111,17 +112,18 @@
 <body>
     <header>
         <nav>
-            <a href="#quiz-section">SBTV Mount Quiz</a>
+            <a href="#quiz-section">Get a Quote</a>
             <a href="#services-section">Services</a>
             <a href="#about-section">About</a>
             <a href="#privacy-policy-section">Privacy Policy</a>
         </nav>
     </header>
     <main>
-        <!-- SBTV Mount Quiz Section -->
         <section id="quiz-section" class="section">
-            <h1>SBTV Mount Quiz</h1>
-            <p>Answer 4 simple questions and get an installation quote. We’ll also recommend the best mount for your TV and wall.</p>
+            <h1>Expert TV Mounting in Moreno Valley</h1>
+            <p>Here at SBTV Installs, we provide fast and reliable TV mounting across Moreno Valley and all of Riverside County. From simple TV hanging to full home theater setups, our professional installers can handle any job. Use our quick quiz below to get an instant quote and recommendations for the best mount for your TV and wall!</p>
+            
+            <h2>SBTV Mount Quiz - Get Your Free Quote!</h2>
             <form class="quiz-form" id="tvQuiz" action="https://formspree.io/f/xyzjraer" method="POST">
                 <div class="question">
                     <label for="name">Name *</label>
@@ -176,27 +178,33 @@
             </form>
         </section>
 
-        <!-- Services Section -->
         <section id="services-section" class="section">
-            <h2>Our Services</h2>
+            <h2>Our Inland Empire TV Installation Services</h2>
             <ul>
-                <li><b>TV Wall Mounting:</b> Professional installation for all TV sizes and types of walls, including drywall, plaster, brick, and above fireplaces.</li>
-                <li><b>Home Theater Setup:</b> Soundbar and surround sound setup, cable management, and equipment integration.</li>
-                <li><b>Cable Concealment:</b> In-wall and on-wall solutions to keep your space tidy and cable-free.</li>
-                <li><b>Custom Mount Solutions:</b> Articulating, tilting, and low-profile mounting options tailored to your needs.</li>
-                <li><b>Commercial Installations:</b> Office, lobby, and retail TV mounting and display solutions.</li>
+                <li><b>TV Wall Mounting:</b> Professional installation for all TV sizes and types of walls in Moreno Valley, Riverside, Perris, and Menifee, including drywall, plaster, brick, and above fireplaces.</li>
+                <li><b>Home Theater Setup:</b> Soundbar and surround sound setup, expert cable management, and equipment integration throughout the Inland Empire.</li>
+                <li><b>Cable Concealment:</b> In-wall and on-wall solutions to keep your space tidy and cable-free for a clean, professional look.</li>
+                <li><b>Custom Mount Solutions:</b> We offer affordable articulating, tilting, and low-profile mounting options tailored to your needs.</li>
+                <li><b>Commercial Installations:</b> Expert office, lobby, and retail TV mounting and display solutions for businesses across Riverside County.</li>
+            </ul>
+
+            <h3>Serving Moreno Valley and Beyond:</h3>
+            <ul>
+                <li>Moreno Valley</li>
+                <li>Riverside</li>
+                <li>Perris</li>
+                <li>Menifee</li>
+                <li>The greater Inland Empire</li>
             </ul>
         </section>
 
-        <!-- About Section -->
         <section id="about-section" class="section">
             <h2>About SBTV Installs</h2>
             <p>
-                SBTV Installs is dedicated to providing you with fast, reliable, and professional TV mounting services. With years of experience and hundreds of happy customers, our technicians ensure your TV is mounted safely and looks great in your space. We serve both residential and commercial clients and are committed to top-tier customer service.
+                SBTV Installs is dedicated to providing you with fast, reliable, and professional TV mounting services in Moreno Valley, CA, and the surrounding Inland Empire. With years of experience and hundreds of happy customers, our technicians ensure your TV is mounted safely and looks great in your space. We serve both residential and commercial clients and are committed to top-tier customer service and delivering 5-star rated installations.
             </p>
         </section>
 
-        <!-- Privacy Policy Section -->
         <section id="privacy-policy-section" class="section">
             <h2>Privacy Policy</h2>
             <p>
